# TAFLAB_boatpi_roshumble

./: .gitignore  README.md  calibration_data.json  dockerfile  launch_boat.sh  ros2_install.tgz  ros_entrypoint.sh  sail_data.csv  servotest.py  wit_calibration.json
Archive/boat_control_system/include/boat_control_system/: DataTypes.hpp  Waypoint_Queue.hpp
Archive/boat_control_system/src/: Coordinate_Calculations.cpp  Sail_Control.cpp  Servo_Control.cpp  coordinate_calculations_node.cpp  waypoint_queue_node.cpp
Archive/install/: local_setup.sh
Archive/log/: latest_build
Control/boat_control_system/: CMakeLists.txt  package.xml
Control/boat_control_system/include/: coordinate_calculations_node.hpp
Control/boat_control_system/include/boat_control_system/: Coordinate_Calculations.h  Sail_Control.hpp  WaypointQueue.hpp  waypoint_queue_node.hpp
Control/boat_control_system/src/: Coordinate_Calculations.cpp  Waypoint_Queue.cpp  coordinate_calculations_node.cpp  waypoint_queue_node.cpp
Control/install/: setup.sh
boat_control_system_final/: CMakeLists.txt
boat_control_system_final/include/boat_control_system_final/: CoordinateCalculationsNode.hpp  Coordinate_Calculations.h  RudderServoControlNode.hpp  SailServoControlNode.hpp  WaypointQueueNode.hpp
boat_control_system_final/install/: setup.sh
boat_control_system_final/install/boat_control_system_final/include/boat_control_system_final/: CoordinateCalculationsNode.hpp  Coordinate_Calculations.h  RudderServoControlNode.hpp  SailServoControlNode.hpp  WaypointQueue.hpp  WaypointQueueNode.hpp
boat_control_system_final/install/boat_control_system_final/share/boat_control_system_final/: local_setup.sh  package.dsv
boat_control_system_final/install/boat_control_system_final/share/boat_control_system_final/cmake/: boat_control_system_finalConfig.cmake
boat_control_system_final/log/: latest_build
boat_control_system_final/src/: CoordinateCalculationsNode.cpp  Coordinate_Calculations.cpp  RudderControlHelper.cpp  RudderServoControlNode.cpp  SailServoControlNode.cpp  WaypointQueueNode.cpp
boat_control_system_final/src/install/: local_setup.sh
boat_launch/boat_launch/: boat_launch.py
boat_logic/: setup.cfg  setup.py
boat_logic/boat_logic/: config.json  main_logic_node.py
comms/xbee_node/: setup.cfg
control_py/control_py/: boat_control_node.py
install/boat_control_system_final/include/boat_control_system_final/: Coordinate_Calculations.h  RudderServoControlNode.hpp  WaypointQueue.hpp
install/boat_control_system_final/share/boat_control_system_final/: local_setup.dsv  package.sh  package.zsh
local_website/: calibration.py  config.json  restart.sh  server.py
local_website/templates/: admin.html  index.html  login.html  network_settings.html
sailing_algorithm/: CMakeLists.txt  package.xml
sailing_algorithm/src/: sailing_controller.cpp
sensors/as5600_sensor/as5600_sensor/: as5600_node.py
sensors/gps_gt_u7/: setup.py
sensors/gps_gt_u7/gps_gt_u7/: filteredgps.py  gps_node.py
sensors/lis3mdl_mag/: setup.cfg  setup.py
src/: calibration_data.json  config.json  mpu_calibration.json
src/autonomous_control/: package.xml  setup.cfg  setup.py
src/autonomous_control/autonomous_control/: autonomous_control.py
src/boat_control_system_final/: CMakeLists.txt  SailAngleData.csv  package.xml
src/boat_control_system_final/include/boat_control_system_final/: CoordinateCalculationsNode.hpp  Coordinate_Calculations.h  RudderControlHelper.hpp  RudderServoControlNode.hpp  SailServoControlNode.hpp  WaypointQueue.hpp  WaypointQueueNode.hpp
src/boat_control_system_final/install/: local_setup.sh
src/boat_control_system_final/install/boat_control_system_final/include/boat_control_system_final/: CoordinateCalculationsNode.hpp  RudderControlHelper.hpp  RudderServoControlNode.hpp
src/boat_control_system_final/install/boat_control_system_final/lib/boat_control_system_final/: sail_servo_control_exec
src/boat_control_system_final/install/boat_control_system_final/share/boat_control_system_final/: package.bash  package.ps1  package.sh
src/boat_control_system_final/resources/: SailAngleData.csv  desktop.ini
src/boat_control_system_final/src/: CoordinateCalculationsNode.cpp  Coordinate_Calculations.cpp  RudderControlHelper.cpp  RudderServoControlNode.cpp  SailServoControlNode.cpp  WaypointQueue.cpp  WaypointQueueNode.cpp
src/boat_control_system_final/src/install/: setup.sh
src/boat_control_system_final/src/log/: latest_build
src/boat_launch/: package.xml  setup.cfg  setup.py
src/boat_launch/boat_launch/: boat_launch.py
src/boat_logic/: package.xml  setup.cfg  setup.py
src/boat_logic/boat_logic/: config.json  logic_node_together.py  main_logic_node.py
src/boat_logic/boat_logic/log/: latest_build
src/comms/xbee_node/: package.xml  setup.cfg  setup.py
src/comms/xbee_node/xbee_node/: xbee_node.py
src/control_py/: package.xml  setup.cfg  setup.py
src/control_py/control_py/: boat_control_node.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/sensors/as5600_sensor/: package.xml  setup.cfg  setup.py
src/sensors/as5600_sensor/as5600_sensor/: as5600_node.py  tester.py
src/sensors/gps_gt_u7/: package.xml  setup.cfg  setup.py
src/sensors/lis3mdl_mag/: package.xml  setup.cfg  setup.py
src/sensors/mpu9250_sensor/: package.xml  setup.cfg  setup.py
src/sensors/pht_sensor/: package.xml  setup.cfg  setup.py
src/sensors/witmotionmag/: package.xml  setup.cfg  setup.py  wittest.py
src/taflab_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/taflab_msgs/msg/: CalibrationData.msg  ControlData.msg
src/test_publisher/: package.xml  setup.cfg  setup.py
src/test_publisher/test_publisher/: boat_gui.py  publisher.py  visualizer.py
src/xbee_comm_py/: setup.cfg
src/xbee_comm_py/xbee_comm_py/: config.json
taflab_msgs/: CMakeLists.txt
taflab_msgs/msg/: CalibrationData.msg
test/: bypass.py  cal_gyro_acc.py  data2.py  datampu9250.py  mpu9250-dev.py  testAK893.py
xbee_comm_py/: package.xml  setup.py
xbee_comm_py/xbee_comm_py/: xbee_comm_node.py
(+113 files in other folders)
